; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/krb5/extr_send_to_kdc.c_send_and_recv_tcp.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/krb5/extr_send_to_kdc.c_send_and_recv_tcp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, %struct.TYPE_6__*, %struct.TYPE_6__*)* @send_and_recv_tcp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @send_and_recv_tcp(i32 %0, i32 %1, %struct.TYPE_6__* %2, %struct.TYPE_6__* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_6__*, align 8
  %9 = alloca %struct.TYPE_6__*, align 8
  %10 = alloca [4 x i8], align 1
  %11 = alloca i64, align 8
  %12 = alloca %struct.TYPE_6__, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store %struct.TYPE_6__* %2, %struct.TYPE_6__** %8, align 8
  store %struct.TYPE_6__* %3, %struct.TYPE_6__** %9, align 8
  %13 = getelementptr inbounds [4 x i8], [4 x i8]* %10, i64 0, i64 0
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = call i32 @_krb5_put_int(i8* %13, i32 %16, i32 4)
  %18 = load i32, i32* %6, align 4
  %19 = getelementptr inbounds [4 x i8], [4 x i8]* %10, i64 0, i64 0
  %20 = call i64 @net_write(i32 %18, i8* %19, i32 4)
  %21 = icmp slt i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %4
  store i32 -1, i32* %5, align 4
  br label %69

23:                                               ; preds = %4
  %24 = load i32, i32* %6, align 4
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i32 0, i32 1
  %27 = load i8*, i8** %26, align 8
  %28 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %29 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 8
  %31 = call i64 @net_write(i32 %24, i8* %27, i32 %30)
  %32 = icmp slt i64 %31, 0
  br i1 %32, label %33, label %34

33:                                               ; preds = %23
  store i32 -1, i32* %5, align 4
  br label %69

34:                                               ; preds = %23
  %35 = load i32, i32* %6, align 4
  %36 = load i32, i32* %7, align 4
  %37 = call i64 @recv_loop(i32 %35, i32 %36, i32 0, i64 4, %struct.TYPE_6__* %12)
  %38 = icmp slt i64 %37, 0
  br i1 %38, label %39, label %40

39:                                               ; preds = %34
  store i32 -1, i32* %5, align 4
  br label %69

40:                                               ; preds = %34
  %41 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 0
  %42 = load i32, i32* %41, align 8
  %43 = icmp ne i32 %42, 4
  br i1 %43, label %44, label %46

44:                                               ; preds = %40
  %45 = call i32 @krb5_data_free(%struct.TYPE_6__* %12)
  store i32 -1, i32* %5, align 4
  br label %69

46:                                               ; preds = %40
  %47 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 1
  %48 = load i8*, i8** %47, align 8
  %49 = call i32 @_krb5_get_int(i8* %48, i64* %11, i32 4)
  %50 = call i32 @krb5_data_free(%struct.TYPE_6__* %12)
  %51 = load i32, i32* %6, align 4
  %52 = load i32, i32* %7, align 4
  %53 = load i64, i64* %11, align 8
  %54 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %55 = call i64 @recv_loop(i32 %51, i32 %52, i32 0, i64 %53, %struct.TYPE_6__* %54)
  %56 = icmp slt i64 %55, 0
  br i1 %56, label %57, label %58

57:                                               ; preds = %46
  store i32 -1, i32* %5, align 4
  br label %69

58:                                               ; preds = %46
  %59 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %60 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %59, i32 0, i32 0
  %61 = load i32, i32* %60, align 8
  %62 = sext i32 %61 to i64
  %63 = load i64, i64* %11, align 8
  %64 = icmp ne i64 %62, %63
  br i1 %64, label %65, label %68

65:                                               ; preds = %58
  %66 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %67 = call i32 @krb5_data_free(%struct.TYPE_6__* %66)
  store i32 -1, i32* %5, align 4
  br label %69

68:                                               ; preds = %58
  store i32 0, i32* %5, align 4
  br label %69

69:                                               ; preds = %68, %65, %57, %44, %39, %33, %22
  %70 = load i32, i32* %5, align 4
  ret i32 %70
}

declare dso_local i32 @_krb5_put_int(i8*, i32, i32) #1

declare dso_local i64 @net_write(i32, i8*, i32) #1

declare dso_local i64 @recv_loop(i32, i32, i32, i64, %struct.TYPE_6__*) #1

declare dso_local i32 @krb5_data_free(%struct.TYPE_6__*) #1

declare dso_local i32 @_krb5_get_int(i8*, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
